--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,6 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire-ui/modal": "^1.0",
-        "livewire/livewire": "^2.12",
         "mbezhanov/faker-provider-collection": "^2.0",
         "wire-elements/modal": "^1.0",
         "yoeunes/toastr": "^2.3"
@@ -26,6 +24,9 @@
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
